public class AgentRate implements FXRateStrategy{

    public float getFXRate(){
        return 90.2f;
    }
}
