public interface FXRateStrategy {

    float getFXRate();
}
