public interface Notification {

    public void sendNotification();
}
