public class Order {

    Notification notification;

    public void setNotification(Notification notification){
        this.notification = notification;
    }
}
