public class P2PRate implements FXRateStrategy{

    public float getFXRate(){
        return 91.2f;
    }
}
