public class SMSNotification implements Notification {

    public void sendNotification() {
        System.out.println("SMS Notification");
    }
}
